--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,93 @@
-/*
- * Estilos de tu proyecto
- */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.montserrat{
+  font-family: 'Montserrat', sans-serif;
+}
+
+.lato{
+  font-family: 'Lato', sans-serif;
+}
+
+.box-header{
+display: inline-block;
+width: 100%;
+height: 100%;
+position: relative;
+}
+
+header{
+  margin-top: 0;
+  outline: 1px solid red;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 16%;
+  background-color: #2c3e50;
+  color: #fff;
+  z-index: 1000;
+  font-weight: 700;
+  padding: 8px 16px;
+  overflow: auto;
+}
+
+ul, li{
+ list-style: none;
+ display: inline;
+}
+
+div.title-header a, nav.box-header a, .portfolio a, #about a, .footer-above a{
+  color: inherit;
+  text-decoration: none;
+}
+
+header div{
+  height: 100%;
+}
+header .title-header{
+  display: inline;
+  position: relative;
+  font-size: 1.1rem;
+  line-height: 20px;
+  float: left;
+}
+
+ul.list-main {
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#main-part{
+  padding-top: 20%;
+  padding-bottom: 50px;
+  text-align: center;
+  color: #fff;
+  background: #18bc9c;
+}
+
+.container{
+  max-width: 540px;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#main-part img{
+  display: block;
+  margin: 0 auto 20px;
+  max-width: 100%;
+  height: auto;
+}
+
+#main-part .intro-text .name{
+  font-size: 400%;
+  font-weight: 700;
+  display: block;
+}
