--- a/css/main.css
+++ b/css/main.css
@@ -2,92 +2,330 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow: auto;
+  list-style: none;
+  text-decoration: none;
 }
-
+.text-align {
+  text-align: center;
+}
 .montserrat{
   font-family: 'Montserrat', sans-serif;
 }
-
 .lato{
   font-family: 'Lato', sans-serif;
 }
 
-.box-header{
-display: inline-block;
-width: 100%;
-height: 100%;
-position: relative;
-}
 
 header{
-  margin-top: 0;
-  outline: 1px solid red;
-  display: flex;
-  position: fixed;
+  background: #2c3e50;
   width: 100%;
-  height: 16%;
-  background-color: #2c3e50;
-  color: #fff;
+  height: 107px;
+  position: fixed;
   z-index: 1000;
   font-weight: 700;
-  padding: 8px 16px;
-  overflow: auto;
 }
-
-ul, li{
- list-style: none;
- display: inline;
+.box-header{
+margin-top: 34px;
+height: 35px;
 }
-
-div.title-header a, nav.box-header a, .portfolio a, #about a, .footer-above a{
-  color: inherit;
-  text-decoration: none;
-}
-
-header div{
-  height: 100%;
-}
-header .title-header{
-  display: inline;
-  position: relative;
-  font-size: 1.1rem;
-  line-height: 20px;
-  float: left;
-}
-
-ul.list-main {
+.title-header{
+  margin-left: 40px;
   position: absolute;
-  right: 5%;
-  top: 50%;
-  transform: translateY(-50%);
+  font-size: 32px;
+  color: #fff;
+}
+.list-main li{
+ list-style: none;
+ display: inline-block;
+ margin-right: 15px;
+ letter-spacing: 1px;
+}
+.container-list-main{
+  display: inline-block;
+  float: right;
+  margin-right: 40px;
+  transform: translateY(50%);
+}
+.list-main li a{
+  color: #fff;
+}
+.list-main li a:hover{
+  color: #18bc9c;
+}
+.list-main li a:active {
+  background-color:  #18bc9c;
+  border-bottom: 10px;
+  color: #fff;
+  border-radius: 4%;
+  margin:  2%;
 }
 
 #main-part{
-  padding-top: 20%;
-  padding-bottom: 50px;
+  margin-top: 106px;
   text-align: center;
   color: #fff;
+  height: 686px;
   background: #18bc9c;
 }
+.image {
+  margin-top: 98px;
+}
+.title-main-part{
+  margin-top: 25px;
+  color : #fff;
+}
+.title-main-part .name{
+  font-size: 76px;
+  display: block;
+  text-align: center;
+}
+.specialties{
+  font-size: 28px;
+}
+#start{
+  display: block;
+  text-align: center;
+  margin: 19px 0;
+  color: #fff;
+}
+.fa-star{
+  position: relative;
+  font-size: 30px;
+  bottom: 3px;
+}
+#start::after {
+  content: " ";
+  display: inline-block;
+  width: 103px;
+  height: 5px;
+  background: #fff;
+  margin: 14px 8px;
+  border-radius: 6px;
+}
+#start::before {
+  content: " ";
+  display: inline-block;
+  width: 103px;
+  height: 5px;
+  background: #fff;
+  margin: 14px 8px;
+  border-radius: 6px;
+}
 
-.container{
-  max-width: 540px;
+/*Portofolio*/
+#portfolio {
+  margin-top: 100px;
+  box-sizing: border-box;
+  font-size: 33px;
   width: 100%;
+  color: #212529 ;
+}
+#start2{
+  display: block;
+  text-align: center;
+  margin: 15px 0;
+}
+#start2::after {
+  content: " ";
+  display: inline-block;
+  width: 100px;
+  height: 5px;
+  background: #2c3e50;
+  margin: 14px 10px;
+  border-radius: 6px;
+}
+#start2::before {
+  content: " ";
+  display: inline-block;
+  width: 100px;
+  height: 5px;
+  background: #2c3e50;
+  margin: 14px 8px;
+  border-radius: 6px;
+}
+.rows{
+column-count: 3;
+width: 80%;
+margin: 1% 9%;
+}
+.row1, .row2{
+  display: inline-block;
+}
+.row1 img{
+width: 300px;
+height: 210px;
+margin: 14px;
+}
+.row2 img{
+margin: 14px;
+width: 300px;
+height: 210px;
+}
+#about {
+  background-color: #18bc9c;
+  width: 100%;
+  height: 650px;
+  color: white;
+  text-align: center;
+  margin-top: 129px;
+}
+#about h2{
+  margin-top: 100px;
+  font-size: 45px;
+  display: block;
+  margin-bottom: 1%;
+  color: #fff;
+}
+.paragraph{
+  font-size: 20px;
+  display: inline-block;
+  column-count: 2;
+  line-height: 30px;
+  text-align: left;
+  width: 100%;
+}
+.paragraph-one{
+  width: 290px;
+  min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  margin-left: 180px;
+  color: #fff;
+}
+
+.paragraph-two{
+  width: 290px;
+  min-height: 1px;
+  padding-left: 5px;
+  color: #fff;
+}
+.button{
+  width: 215px;
+  height: 55px;
+  border-radius: 5px;
+  border: 3px solid #fff;
+  color: #fff;
+  background-color: #18bc9c;
+  font-size: 20px;
+  display: inline-block;
+  margin-top: 80px;
+  text-align: center;
   margin-right: auto;
   margin-left: auto;
 }
-
-#main-part img{
-  display: block;
-  margin: 0 auto 20px;
-  max-width: 100%;
-  height: auto;
+.button a{
+  text-decoration: none;
+  color: #fff;
+}
+.button i{
+  margin-top: 15px;
+  margin-right: 5px;
+}
+.button:hover{
+  background-color: #fff;
+}
+a:hover{
+  color: #18bc9c;
 }
 
-#main-part .intro-text .name{
-  font-size: 400%;
-  font-weight: 700;
+/*Contact*/
+#contact {
+  height: 795px;
+  margin-top: 112px;
+}
+#contact h2{
+  text-align: center;
+  font-size: 45px;
   display: block;
+  margin-bottom: 1%;
+}
+.contact-form {
+  box-sizing: border-box;
+  text-align: left;
+  padding-left: 200px;
+}
+hr {
+  margin-left: 0px ;
+  margin-top: 25px;
+  margin-right: 200px;
+  height: 0.5px;
+  background: #868e96;
+  opacity: 0.2;
+}
+input {
+    margin-top: 20px;
+    width: 733px;
+    font-size: 26px;
+    border-style: hidden;
+    color: #868e96;
+}
+.send-button{
+  background-color: #18bc9c;
+  width: 79px;
+  height: 47px;
+  color: white;
+  font-size: 21px;
+  border-style: none;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+.height-message{
+  height: 120px;
+}
+#footer-content{
+  width: 100%;
+  height: 380px;
+  background-color: #2c3e50;
+  color: #fff;
+  box-sizing: border-box;
+  line-height: 30px;
+}
+.footer-above{
+  margin-top: 45px;
+  height: 250px;
+  column-count: 3;
+  display: inline-block;
+  width: 100%;
+}
+.footer-tittle{
+display: inline;
+font-size: 28px;
+}
+.location{
+  text-align: center;
+  display: block;
+  margin-left: 20px;
+}
+.around{
+  text-align: center;
+}
+.icons{
+  margin-top:  40px;
+  border-color: red;
+}
+.circles{
+  color: #fff;
+  margin: 10px;
+}
+.about-freelancer{
+  text-align: center;
+}
+.row{
+  width: 300px;
+  height: 220px;
+}
+.row2{
+  font-size: 21px;
+  line-height: 31px;
+  padding-top: 20px;
+  display: inline-block;
+}
+.link-start{
+color: #18bc9c;
+}
+.footer-down{
+  display: inline;
+  text-align: center;
+  font-size: 18px;
 }
